# ar-tu-do

./: .gitignore  MIGRATION_PROGRESS.md  README.md  ackermann_hybrid_follower.py  ackermann_lidar_wall_follower.py  ackermann_lidar_wall_follower_with_viz.py  ackermann_vision_follower.py  control_config.yaml  direct_joint_controller.py  drive_param_to_ackermann.py  f1tenth_launch.py  game_controller.py  launch_car.py  lidar_distance_test.py  move_to_center.py  quick_fix_converter.py  robot.urdf  robot_simple.urdf  robot_working.urdf  simple_keyboard.py  wall_following_vision.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/racer_description/share/racer_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.ps1  package.sh  package.zsh
install/racer_description/share/racer_description/cmake/: racer_descriptionConfig-version.cmake  racer_descriptionConfig.cmake
install/racer_description/share/racer_description/environment/: ament_prefix_path.dsv  path.dsv
install/racer_description/share/racer_description/launch/: test_spawn.launch.py
install/racer_description/share/racer_description/meshes/: ZED LICENSE  body.dae  car.dae  wheel.dae
install/racer_description/share/racer_description/urdf/: racer.xacro  racer_plugins.gazebo
install/racer_world/share/racer_world/: local_setup.sh  package.dsv
install/racer_world/share/racer_world/launch/: racer_gazebo.launch.py
install/racer_world/share/racer_world/worlds/: racetrack_decorated_2.world
ros_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros_ws/install/car_control/include/car_control/: car_config.h  car_controller.h  dms_controller.h  drive_mode.h  drive_parameters_multiplexer.h  drive_parameters_source.h
ros_ws/install/car_control/lib/car_control/: car_controller
ros_ws/install/car_control/share/car_control/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
ros_ws/install/car_tf/include/car_tf/: laserscan_transformer.h
ros_ws/install/car_tf/lib/car_tf/: laserscan_transformer
ros_ws/install/car_tf/share/car_tf/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros_ws/install/circuit_learning/lib/circuit_learning/: circuit_navigator.py  ml_trainer.py  waypoint_recorder.py
ros_ws/install/circuit_learning/share/circuit_learning/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros_ws/install/drive_msgs/share/drive_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
ros_ws/install/hardware/share/hardware/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.ps1  package.sh  package.xml
ros_ws/install/racer_description/share/racer_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.sh  package.xml
ros_ws/install/racer_slam/share/racer_slam/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros_ws/install/racer_world/share/racer_world/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros_ws/install/teleoperation/lib/teleoperation/: drive_param_to_ackermann_converter.py  keyboard_controller
ros_ws/install/teleoperation/share/teleoperation/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros_ws/launch/: gazebo.launch.py
ros_ws/launch/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros_ws/src/autonomous/circuit_learning/: CMakeLists.txt  package.xml
ros_ws/src/autonomous/circuit_learning/launch/: advanced_wall_follower.launch.py  circuit_learning_complete.launch.py  ml_driver.launch.py  stable_wall_follower.launch.py
ros_ws/src/autonomous/circuit_learning/scripts/: advanced_wall_follower.py  circuit_navigator.py  ml_driver.py  ml_trainer.py  stable_wall_follower.py  waypoint_recorder.py
ros_ws/src/autonomous/move_to_center_supervised/: README.md  compression_benchmark.py  f1_neural_network.py  move_to_center.py  supervised_data_collector.py  supervised_trainer.py  test_data_collector.py
ros_ws/src/autonomous/move_to_center_supervised/collected_data/: collected_data_speed_40.0_temp_1759530483.h5  collected_data_speed_40.0_temp_1759530631.h5
ros_ws/src/car_control/: CMakeLists.txt  package.xml
ros_ws/src/car_control/include/: car_config.h  car_controller.h
ros_ws/src/car_control/src/: car_controller.cpp
ros_ws/src/car_tf/: CMakeLists.txt  package.xml
ros_ws/src/car_tf/include/: laserscan_transformer.h
ros_ws/src/car_tf/src/: laserscan_transformer.cpp  main.cpp
ros_ws/src/drive_msgs/: CMakeLists.txt  package.xml
ros_ws/src/hardware/: CMakeLists.txt  package.xml
ros_ws/src/hardware/launch/: static_wheel_publisher.launch.py
ros_ws/src/simulation/racer_description/: CMakeLists.ros2.txt  CMakeLists.txt  package.ros2.xml  package.xml
ros_ws/src/simulation/racer_description/launch/: display_racer.launch.py  spawn_racer_in_gazebo.launch.py  test_spawn.launch.py
ros_ws/src/simulation/racer_description/urdf/: racer.xacro  racer_macros.xacro  racer_test.xacro
ros_ws/src/simulation/racer_slam/: CMakeLists.txt  package.xml
ros_ws/src/simulation/racer_slam/config/: slam_params.yaml  slam_rviz.rviz
ros_ws/src/simulation/racer_slam/launch/: slam.launch.py  slam_gazebo.launch.py  (+2 more)
ros_ws/src/simulation/racer_world/: CMakeLists.txt
ros_ws/src/teleoperation/: CMakeLists.txt  package.xml
ros_ws/src/teleoperation/include/: keyboard_controller.h
ros_ws/src/teleoperation/launch/: remote_control.launch.py
ros_ws/src/teleoperation/src/: keyboard_controller.cpp
ros_ws/src/teleoperation/teleoperation/: drive_param_to_ackermann_converter.py
(+142 files in other folders)
