<?xml version="1.0" encoding="UTF-8"?>
<package format="3">
  <name>drive_msgs</name>
  <version>0.0.0</version>
  <description>The "drive_msgs" package contains the necessary ROS messages for the F1/10 project.</description>

  <!-- Maintainer -->
  <maintainer email="f110@ls12.cs.uni-dortmund.de">PG F1/10</maintainer>

  <!-- License -->
  <license>MIT</license>
  <license>GPLv3</license>

  <!-- ROS 2 Dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>std_msgs</depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Testing Dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Export information -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
