<?xml version="1.0" encoding="UTF-8"?>
<package format="3">
  <name>teleoperation</name>
  <version>0.0.0</version>
  <description>The "teleoperation" package contains code for manual control of the car.</description>

  <!-- Maintainer -->
  <maintainer email="f110@ls12.cs.uni-dortmund.de">PG F1/10</maintainer>

  <!-- License -->
  <license>MIT</license>
  <license>GPLv3</license>

  <!-- ROS 2 Dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>drive_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>joy</depend>
  <depend>geometry_msgs</depend>

  <!-- Testing Dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Export information -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
